[package]
name = "tinypatscan"
version = "0.1.1"
edition = "2024"

[dependencies]
rayon = {version = "1.10.0", optional = true }
wide = { version = "0.7.32", optional = true, default-features = false }

[features]
multithreading = ["dep:rayon", "std"]
simd = ["dep:wide"]
std = []
default = ["simd"]
